# batch-pqc

./: .dockerignore  .gitignore  .gitmessage.txt  .gitmodules  CMakeLists.txt  Dockerfile  README.md  README_ru.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_batch.c  bench_seq.c
docs/: report.md
scripts/: benchmark.sh  docker_run.sh  install_deps.sh  plot_results.py  security.sage  third_party.sh
src/: CMakeLists.txt  batch_adapters.c  batch_adapters.h  batch_bench.h  batch_signing.c  batch_signing.h  batch_signing_adapters.c  batch_signing_adapters.h
src/merkle/: merkle.c  merkle.h
src/signature/: adapters.h  hypericum_adapter.c  kryzhovnik_adapter.c  registry.c  shipovnik_adapter.c
src/utils/: message_gen.c  message_gen.h  timer.c  timer.h
tests/: CMakeLists.txt  test_adapters_batch.c  test_adapters_smoke.c  test_batch_signing.c  test_merkle.c  test_streebog.c
